--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "concurrently \"react-scripts start\" \"cd api && nodemon index.js\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
