--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"cd api && node index.js\"",
     "build": "react-scripts build",
     "dev": "concurrently \"react-scripts start\" \"cd api && nodemon index.js\"",
     "test": "react-scripts test",
